--- a/application/public/view/inc/head.html
+++ b/application/public/view/inc/head.html
@@ -9,7 +9,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
     <title>{$PAGE_TITLE | default=''} - {$SETTING_SITENAME}</title>
     <link rel="stylesheet" href="/static/style.css">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://autocdn.cloudream.top/public/tomzhao/icp/js/sweetalert.min.js"></script>
     <script type="application/javascript">
         function getLocalTime(nS) {
             return new Date(parseInt(nS) * 1000).toLocaleString().replace(/:\d{1,2}$/,' ');
