--- a/application/public/view/index/home.html
+++ b/application/public/view/index/home.html
@@ -14,7 +14,7 @@
         <h1 class="title">{$SETTING_SITENAME}</h1>
         <div style="display:flex;justify-content: center;align-items: center;">
             <input type="text" id="keyword" placeholder="{$SETTING_SEARCHPLACEHOLDER}" class="search">
-            <h6 style="position: fixed;bottom: 6px;">云梦ICP {php}echo SYS_VERSION;{/php}</h6>
+            <h6 style="position: fixed;bottom: 6px;">氢ICP v1.3.2 | 备案完成后记得发送<a href="https://ticket.tomzhao.top/" target="_blank">工单</a>提醒管理员审核！</h6>
         </div>
         <div id="tip_list">
         </div>
