--- a/application/public/view/user/register_1.html
+++ b/application/public/view/user/register_1.html
@@ -1,7 +1,7 @@
 {include file='public@inc/head'}
 <div class="page">
     <div class="container">
-        <h1 class="title">自定义一个备案号</h1>
+        <h1 class="title">自定义一个备案号</h1><p style="text-align: center;">注意：备案号规则为年份+数字，其他申请不予通过。</p><br>
         <div style="display:flex;justify-content: center;align-items: center;">
             <input type="text" id="keyword" placeholder="输入你想选择的号码" maxlength="18" class="search">
         </div>
@@ -25,7 +25,7 @@
                     xhr.onreadystatechange = function () {
                         if (xhr.readyState == 4 && xhr.status == 200) {
                             if (xhr.responseText === "0") document.getElementById("tip_list").innerHTML = "<h5 class=\"tip\" style='color: whitesmoke;'>该号码可以选择，<a href='/user.php/register/info?n=" + key_input.value + "'>下一步</a></h5>";
-                            else if (xhr.responseText === "1") document.getElementById("tip_list").innerHTML = "<h5 class=\"tip\">该备案号已经拥有</h5>";
+                            else if (xhr.responseText === "1") document.getElementById("tip_list").innerHTML = "<h5 class=\"tip\">该备案号已被拥有</h5>";
                         } else if (xhr.readyState == 4) {
                             document.getElementById("tip_list").innerHTML = "<h5 class=\"tip\">请求出错(" + xhr.status + ")</h5>";
                         }
