--- a/application/public/view/user/register_3.html
+++ b/application/public/view/user/register_3.html
@@ -26,29 +26,47 @@
                     <input type="url" id="main_url" class="front-input" maxlength="30">
                 </div>
                 <div>
-                    <label for="main_url">网站备案链接（无需填写http://或https://）</label>
+                    <label for="icp_url">网站备案链接（无需填写http://或https://）</label>
                     <input type="text" id="icp_url" class="front-input" maxlength="30">
                 </div>
                 <div>
-                    <label for="main_url">网站所有人</label>
+                    <label for="icp_owner">网站所有人</label>
                     <input type="text" id="icp_owner" class="front-input" maxlength="18">
+                </div>
+                <div>
+                    <label for="captcha">验证码</label>
+                    <input type="text" id="captcha" class="front-input" maxlength="4">
+                    <img src="{:url('user/register/generateCaptcha')}" alt="验证码" id="captcha-img" onclick="refreshCaptcha()">
                 </div>
                 <button type="button" class="front-button" onclick="reg()">申请</button>
             </div>
             <div id="tip_list"></div>
         </div>
         <script type="application/javascript">
+            function refreshCaptcha() {
+                var captchaImg = document.getElementById('captcha-img');
+                captchaImg.src = "{:url('user/register/generateCaptcha')}?" + Math.random();
+            }
+
             function reg(){
                 var site_name = document.getElementById("site_name").value;
                 var site_desc = document.getElementById("site_desc").value;
                 var main_url = document.getElementById("main_url").value;
                 var icp_url = document.getElementById("icp_url").value;
                 var icp_owner = document.getElementById("icp_owner").value;
-                fetch("/user.php/register/end_check",{method:"post",headers: {"Content-Type":"application/x-www-form-urlencoded"},body:`sitename=${site_name}&&sitedesc=${site_desc}&&icpowner=${icp_owner}&&icpurl=${icp_url}&&mainurl=${main_url}&&number={$number}&&userid={$userid}`})
+                var captcha = document.getElementById("captcha").value;
+                fetch("/user.php/register/end_check",{
+                    method:"post",
+                    headers: {"Content-Type":"application/x-www-form-urlencoded"},
+                    body:`sitename=${site_name}&sitedesc=${site_desc}&icpowner=${icp_owner}&icpurl=${icp_url}&mainurl=${main_url}&number={$number}&userid={$userid}&captcha=${captcha}`
+                })
                     .then(res => res.text())
                     .then(function (res){
                         if (res === "ok") window.open("/","_self");
-                        else document.getElementById("tip_list").innerHTML = "<h5 class=\"tip\">" + res + "</h5>";
+                        else {
+                            document.getElementById("tip_list").innerHTML = "<h5 class=\"tip\">" + res + "</h5>";
+                            refreshCaptcha(); // 刷新验证码
+                        }
                     })
             }
         </script>
